clusters/talos-cluster/qdrant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qdrant-service
  namespace: qdrant
  annotations:
    external-dns.alpha.kubernetes.io/hostname: qdrant.horus
spec:
  selector:
    app: qdrant
  ports:
  - name: http
    port: 6333
    targetPort: 6333
  - name: grpc
    port: 6334
    targetPort: 6334
  type: LoadBalancer
