clusters/talos-cluster/qdrant/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qdrant-http-route
  namespace: qdrant
spec:
  parentRefs:
    - kind: Gateway
      name: cilium-gateway
      namespace: gateway
  hostnames:
    - "qdrant.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qdrant-service
          port: 6333
